fixed wrong size input field

--- a/css/stweaks.css
+++ b/css/stweaks.css
@@ -80,7 +80,7 @@
 }
 
 #chatpane.st-chat #chatinput:not(.right) {
-    width: calc(100% - 130px);
+    width: 100%;
     right: 0px;
     left: auto;
 }
